--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tanstack/react-query": "^5.90.5",
     "lucide-react": "^0.548.0",
     "motion": "^12.23.24",
-    "next": "16.0.0",
+    "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
